# relayops-ai

./: .env.example  .gitignore  APPLICATION_MESSAGE.md  DEMO_SCRIPT.md  PLAN.md  PRESENTATION.md  README.md  alembic.ini  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_upgrade_existing_tables.py
app/: auth.py  config.py  integrations.py  jobs.py  logging.py  main.py  migrations.py  models.py  observability.py  repository.py  services.py  worker.py
frontend-tests/: app.spec.js
static/: app.js  index.html  settings.html  settings.js  styles.css
tests/: test_app.py
web/: README.md  package-lock.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/[...path]/: route.ts
web/src/app/dashboard/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/signin/: page.tsx
web/src/components/: dashboard-shell.tsx  settings-shell.tsx  signin-shell.tsx
web/src/lib/: relayops.ts  server-relayops.ts  session.ts
